--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>io.github.opendonationassistant</groupId>
   <artifactId>oda-font-service</artifactId>
   <version>0.2</version>
   <packaging>${packaging}</packaging>
-
   <parent>
     <groupId>io.micronaut.platform</groupId>
     <artifactId>micronaut-parent</artifactId>
@@ -23,14 +21,12 @@
     <micronaut.runtime>netty</micronaut.runtime>
     <exec.mainClass>io.github.opendonationassistant.Application</exec.mainClass>
   </properties>
-
   <repositories>
     <repository>
       <id>central</id>
       <url>https://repo.maven.apache.org/maven2</url>
     </repository>
   </repositories>
-
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -44,8 +40,23 @@
   </dependencyManagement>
   <dependencies>
     <dependency>
-        <groupId>org.infinispan</groupId>
-        <artifactId>infinispan-commons</artifactId>
+      <groupId>io.github.opendonationassistant</groupId>
+      <artifactId>oda-commons</artifactId>
+      <version>0.7.47</version>
+    </dependency>
+    <dependency>
+      <groupId>io.github.opendonationassistant</groupId>
+      <artifactId>oda-rabbit-conf</artifactId>
+      <version>0.7.47</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.pdfbox</groupId>
+      <artifactId>fontbox</artifactId>
+      <version>3.0.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.infinispan</groupId>
+      <artifactId>infinispan-commons</artifactId>
     </dependency>
     <dependency>
       <groupId>org.infinispan</groupId>
@@ -138,13 +149,13 @@
         <groupId>io.micronaut.maven</groupId>
         <artifactId>micronaut-maven-plugin</artifactId>
         <configuration>
-              <aotDependencies>
-                  <dependency>
-                      <groupId>io.micronaut.security</groupId>
-                      <artifactId>micronaut-security-aot</artifactId>
-                      <version>${micronaut.security.version}</version>
-                  </dependency>
-              </aotDependencies>
+          <aotDependencies>
+            <dependency>
+              <groupId>io.micronaut.security</groupId>
+              <artifactId>micronaut-security-aot</artifactId>
+              <version>${micronaut.security.version}</version>
+            </dependency>
+          </aotDependencies>
           <configFile>aot-${packaging}.properties</configFile>
         </configuration>
       </plugin>
@@ -158,7 +169,6 @@
         <configuration>
           <!-- Uncomment to enable incremental compilation -->
           <!-- <useIncrementalCompilation>false</useIncrementalCompilation> -->
-
           <annotationProcessorPaths combine.children="append">
             <path>
               <groupId>io.micronaut</groupId>
@@ -205,7 +215,7 @@
               <goal>generate</goal>
             </goals>
             <configuration>
-            <inputSpec>${project.basedir}/target/classes/META-INF/swagger/oda-font-service-${version}.yml</inputSpec>
+              <inputSpec>${project.basedir}/target/classes/META-INF/swagger/oda-font-service-${version}.yml</inputSpec>
               <generatorName>typescript-axios</generatorName>
               <configurationFile>openapi-config.json</configurationFile>
               <configOptions>
@@ -217,5 +227,4 @@
       </plugin>
     </plugins>
   </build>
-
 </project>
