--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -53,7 +53,7 @@ jobs:
     #     git push
 
     - name: Build with Maven
-      run: mvn -B package --file pom.xml -Dpackaging=native-image -DskipTests
+      run: mvn -B package --file pom.xml -DskipTests
 
     - run: npm install
       working-directory: "target/generated-sources/openapi/"
