--- a/src/main/resources/application-standalone.yml
+++ b/src/main/resources/application-standalone.yml
@@ -1,6 +1,12 @@
 logger:
   levels:
     io.github.opendonationassistant: INFO
+datasources:
+  default:
+    url: ${JDBC_URL:`jdbc:postgresql://localhost/postgres?currentSchema=fonts`}
+    username: ${JDBC_USER:`postgres`}
+    password: ${JDBC_PASSWORD:`postgres`}
+    driverClassName: 'org.postgresql.Driver'
 endpoints:
   all:
     enabled: true
