add max pool size for db connection pool

--- a/src/main/resources/application-standalone.yml
+++ b/src/main/resources/application-standalone.yml
@@ -7,6 +7,7 @@ datasources:
     username: ${JDBC_USER:`postgres`}
     password: ${JDBC_PASSWORD:`postgres`}
     driverClassName: 'org.postgresql.Driver'
+    maximumPoolSize: 3
 endpoints:
   all:
     enabled: true
