use jar packaging

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -12,5 +12,6 @@ jobs:
     uses: "OpenDonationAssistant/oda-libraries/.github/workflows/release_service.yml@master"
     secrets: inherit
     with:
-      service: news-service
+      service: font-service
       version: '${{ github.RUN_NUMBER }}'
+      packaging: 'jar'
