--- a/pom.xml
+++ b/pom.xml
@@ -257,10 +257,12 @@
             </goals>
             <configuration>
               <inputSpec>${project.basedir}/target/classes/META-INF/swagger/oda-font-service-1.0.0.yml</inputSpec>
+              <ve
               <generatorName>typescript-axios</generatorName>
               <configurationFile>openapi-config.json</configurationFile>
               <configOptions>
                 <output>${project.build.directory}/</output>
+                <npmVersion>${project.version}</npmVersion>
               </configOptions>
             </configuration>
           </execution>
